--- a/src/style.css
+++ b/src/style.css
@@ -963,8 +963,6 @@ div.custom-logo a {
 		float: left;
 		margin-top: 2px;
 		margin-top: 0.2rem;
-		padding: 11px 0;
-		padding: 1.1rem 0;
 	}
 }
 
